LB/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  #  namespace: dev
spec:
  rules:
  - host: test.apps.example.info
    http:
      paths: 
      - backend:
          serviceName: nginx
          servicePort: 80
         path: /app
